[Nawaz][Added express server to render static files]

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="../style.css" rel="stylesheet" type="text/css" />
     <title>Types of JS</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
         integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
@@ -123,7 +123,7 @@
     <div class="container">
         <div class="row">
             <div class="card col-12 col-md-4 col-sm-6" style="width:400px">
-                <img class="card-img-top" src='Nawaz.jpg' alt="Card image">
+                <img class="card-img-top" src='../goku.jpg' alt="Card image">
                 <div class="card-body">
                     <h4 class="card-title" id="title">Nawaz Sherif</h4>
                     <p class="card-text" id="description">Is a good developer</p>
